<resources>
    <string name="app_name">TEXVALLEY</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="icon_user">&#xf2bd;</string>

    <string name="horizontal_timeline">Horizontal Timeline</string>
    <string name="vertical_timeline">Vertical Timeline</string>
    <string name="horizontal_timeline_w_padding">Horizontal Timeline With Line Padding</string>
    <string name="vertical_timeline_w_padding">Vertical Timeline With Line Padding</string>
    <string name="orientation">Orientation</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="marker">Marker</string>
    <string name="elevation">Size</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="marker_drawable_message">You can also change the marker drawable in attributes.</string>
    <string name="marker_in_center">In center</string>
    <string name="line">Line</string>
    <string name="start_line_color">Start Line Color</string>
    <string name="end_line_color">End Line Color</string>
    <string name="width">Width</string>
    <string name="type">Type</string>
    <string name="dash_length">Dash Length</string>
    <string name="dash_gap">Dash Gap</string>
    <string name="line_padding">Line Padding</string>
    <string name="timeline_attributes">Timeline Attributes</string>
    <string name="style">Style</string>
    <string name="example">Example</string>
    <string name="activity_example_label">Example</string>
    <string name="apply">Apply</string>

    <string-array name="line_type">
        <item>Normal</item>
        <item>Dashed</item>
    </string-array>
    <string name="contactnumber">Contact Number <font color='red'>*</font></string>
    <string name="user_name">Customer Name <font color='red'>*</font></string>
    <string name="email">E-mail <font color='red'>*</font></string>
    <string name="area">Area <font color='red'>*</font></string>
    <string name="types">Type <font color='red'>*</font></string>
    <string name="opptyname">Oppurtunity Name <font color='red'>*</font></string>
    <string name="expctddate">Expected Close date <font color='red'>*</font></string>
    <string name="classification">Classification <font color='red'>*</font></string>
    <string name="stage">Stage <font color='red'>*</font></string>
    <string name="createdate">Create Date <font color='red'>*</font></string>
    <string name="enquiry">Enquiry <font color='red'>*</font></string>
    <string name="leadsource">Lead Source <font color='red'>*</font></string>
    <string name="value">Value <font color='red'>*</font></string>

    <string name="fllwdescptn">Description <font color='red'>*</font></string>
    <string name="assignto">Assign To <font color='red'>*</font></string>
    <string name="nxtschdlddte">Next Schedule Date &amp; Time <font color='red'>*</font></string>

    <string name="mdeofcntct">Mode Of Contact <font color='red'>*</font></string>
    <string name="visitedby">Visited By <font color='red'>*</font></string>
    <string name="classifiction">Classification <font color='red'>*</font></string>
    <string name="stagefollwup">Stage <font color='red'>*</font></string>
    <string name="remarkfllw">Remark <font color='red'>*</font></string>
    <string name="nxtdteandtimescdle">Next Schedule Date &amp; Time <font color='red'>*</font></string>



</resources>
