<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:scrollbars="horizontal"
android:id="@+id/scrollOppurtunityCreation"
tools:context=".oppurtunity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/Relative_layout"
    >


    <TextView
        android:text="@string/opptyname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/cus_opptyname"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/avenirlight"
        android:textColor="#000"
        android:textStyle="bold">

    </TextView>
    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/opptynmelists"
        android:layout_below="@+id/cus_opptyname"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_width="300dp"
        android:textSize="18sp"
        android:layout_height="35dp"
        android:hint= "select Stages"

        />
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-10dp"
        android:background="@drawable/shapesblwvrsn"
        android:layout_below="@id/opptynmelists"
        android:id="@+id/txtppnme"/>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/Relative_layout1"
        android:layout_below="@+id/txtppnme"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/expctddate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cus_expctddate"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/avenirlight"
            android:textStyle="bold"
            >

        </TextView>
        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/date_time_set"
            android:layout_width="300dp"
            android:hint="Set Date"
            android:textColorHint="#000"
            android:fontFamily="@font/avenirlight"
            android:padding="7dp"
            android:layout_below="@+id/cus_expctddate"
            android:layout_height="40dp"
            android:textColor="#000"
            android:layout_marginLeft="10dp"
            android:backgroundTintMode="add"
            android:textSize="18sp"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:inputType="text"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/calendaricon"
            android:layout_marginLeft="270dp"
            android:layout_marginTop="60dp"/>
        <TextView
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="-13dp"
            android:background="@drawable/shapesblwvrsn"
            android:layout_below="@id/date_time_set"/>
    </RelativeLayout>
    <TextView
        android:text="@string/classification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:id="@+id/cus_clssfy"
        android:textColor="#000"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/avenirlight"
        android:textStyle="bold">

    </TextView>
    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/listClassifications"
        android:layout_below="@+id/cus_clssfy"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_width="300dp"
        android:textSize="18sp"
        android:layout_height="35dp"
        android:hint= "select Stages"

        />
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-10dp"
        android:background="@drawable/shapesblwvrsn"
        android:layout_below="@id/listClassifications"/>
   <!-- <TextView
        android:text="Sales Stage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/avenirlight"
        android:textSize="18sp"
        android:id="@+id/cus_salesstage"
        android:textColor="#000"
        android:textStyle="bold">

    </TextView>
    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/listStages"
        android:layout_below="@+id/cus_salesstage"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:hint= "select Stages"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-10dp"
        android:background="@drawable/shapesblwvrsn"
        android:layout_below="@id/listStages"/>-->
    <TextView
        android:text="@string/stage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/avenirlight"
        android:textSize="18sp"
        android:id="@+id/typesofstage"
        android:textColor="#000"
        android:textStyle="bold">

    </TextView>
    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/spintypesofstage"
        android:layout_below="@+id/typesofstage"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:hint= "Select types"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-10dp"
        android:background="@drawable/shapesblwvrsn"
        android:layout_below="@id/spintypesofstage"/>
    <TextView
        android:text="@string/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        android:id="@+id/cus_value"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:inputType="text"
        android:textColor="#000"
        android:fontFamily="@font/avenirlight"
        android:textStyle="bold">

    </TextView>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint= "Value"
        android:inputType="number"
        android:id="@+id/editcus_value"
        android:layout_below="@+id/cus_value"
        android:drawableBottom= "@drawable/shapesblwvrsn"
        android:layout_marginLeft="10dp"
        android:textCursorDrawable="@drawable/colorcursor"
        android:fontFamily="@font/avenirlight"
        android:padding="15dp"
        android:textSize="18sp"
        android:layout_marginTop="15dp">
    </EditText>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/Relative_layoutdte"
        android:layout_below="@+id/editcus_value"
        android:layout_marginTop="10dp">

        <TextView
            android:text="@string/createdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/crtedtetxt"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/avenirlight"
            android:textStyle="bold"
            >

        </TextView>
        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/crtedtetxtget"
            android:layout_width="300dp"
            android:hint="Set Date"
            android:textColorHint="#000"
            android:fontFamily="@font/avenirlight"
            android:padding="7dp"
            android:layout_below="@+id/crtedtetxt"
            android:layout_height="40dp"
            android:textColor="#000"
            android:layout_marginLeft="10dp"
            android:backgroundTintMode="add"
            android:textSize="18sp"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:inputType="text"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/calendaricon"
            android:layout_marginLeft="270dp"
            android:layout_marginTop="60dp"/>
        <TextView
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="-13dp"
            android:background="@drawable/shapesblwvrsn"
            android:layout_below="@id/crtedtetxtget"/>
    </RelativeLayout>
    <TextView
        android:text="@string/enquiry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="655dp"
        android:textSize="18sp"
        android:id="@+id/cus_enquiry"
        android:layout_marginLeft="10dp"
        android:textColor="#000"
        android:fontFamily="@font/avenirlight"
        android:textStyle="bold">

    </TextView>


    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/listEnquiry"
        android:layout_below="@+id/cus_enquiry"
        android:hint= "select Enquiry"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-10dp"
        android:background="@drawable/shapesblwvrsn"
        android:layout_below="@id/listEnquiry"/>
    <TextView
        android:text="LEAD SOURCES:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="770dp"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/avenirmedium"
        android:id="@+id/leadsource_head"
        android:textColor="#000"
        >

    </TextView>
    <TextView
        android:text="@string/leadsource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="820dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:id="@+id/cus_leadsrce"
        android:textColor="#000"
        android:fontFamily="@font/avenirlight"
        android:textStyle="bold">

    </TextView>
    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/leadsrce_status"
        android:layout_below="@+id/cus_leadsrce"
        android:hint= "select Leads"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-10dp"
        android:background="@drawable/shapesblwvrsn"
        android:layout_below="@id/leadsrce_status"/>
    <TextView
        android:text="Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="930dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:id="@+id/cus_descrptn"
        android:textColor="#000"
        android:fontFamily="@font/avenirlight"
        android:textStyle="bold">

    </TextView>
    <EditText

        android:layout_height="wrap_content"
        android:hint= "Descriptions"
        android:id="@+id/editcus_descrptn"
        android:layout_below="@+id/cus_descrptn"
        android:layout_width="300dp"
        android:drawableBottom= "@drawable/shapesblwvrsn"
        android:layout_marginLeft="10dp"
        android:textCursorDrawable="@drawable/colorcursor"
        android:fontFamily="@font/avenirlight"
        android:padding="15dp"
        android:textSize="18sp"
        android:layout_marginTop="15dp">
    </EditText>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/nexttabicon"
        app:elevation="4dp"
        app:backgroundTint="#ff5e62"

        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="5dp"
        android:id="@+id/next_up"
        android:layout_below="@id/editcus_descrptn" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginTop="1060dp">
    </View>
</RelativeLayout>

</ScrollView>