<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="horizontal"
    android:id="@+id/ScrollView"
    tools:context=".oppurtunity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:text="@string/contactnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/cus_no"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/avenirlight"
            android:textColor="#000"
            android:textStyle="bold"

            >
        </TextView>
        <EditText
            android:layout_height="wrap_content"
            android:hint= "Contact Number"
            android:id="@+id/editcus_no"
            android:layout_below="@+id/cus_no"
            android:layout_width="300dp"
            android:drawableBottom="@drawable/shapes1"
            android:layout_marginLeft="10dp"
            android:textCursorDrawable="@drawable/colorcursor"
            android:fontFamily="@font/avenirlight"
            android:padding="15dp"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:inputType="text">
        </EditText>
        <TextView
            android:text="@string/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="115dp"
            android:id="@+id/cus_name"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/avenirlight"
            android:textColor="#000"
            android:textStyle="bold">

        </TextView>
        <EditText
            android:layout_height="wrap_content"
            android:hint= "Enter Name"
            android:id="@+id/editcus_name"
            android:layout_below="@+id/cus_name"
            android:layout_width="300dp"
            android:drawableBottom= "@drawable/shapes1"
            android:layout_marginLeft="10dp"
            android:textCursorDrawable="@drawable/colorcursor"
            android:fontFamily="@font/avenirlight"
            android:padding="15dp"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:inputType="text">
        </EditText>


        <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="225dp"
            android:id="@+id/cus_email"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/avenirlight"
            android:textColor="#000"
            android:textStyle="bold"
            >

        </TextView>
        <EditText
            android:layout_height="wrap_content"
            android:hint= "Enter E-mail"
            android:id="@+id/editcus_email"
            android:layout_below="@+id/cus_email"
            android:layout_width="300dp"
            android:drawableBottom= "@drawable/shapes1"
            android:layout_marginLeft="10dp"
            android:textCursorDrawable="@drawable/colorcursor"
            android:fontFamily="@font/avenirlight"
            android:padding="15dp"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:inputType="text">
        </EditText>
        <TextView
            android:text="Website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="325dp"
            android:id="@+id/cus_website"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/avenirlight"
            android:textColor="#000"
            android:textStyle="bold">

        </TextView>
        <EditText

            android:layout_height="wrap_content"
            android:hint= "Enter Website"
            android:id="@+id/editcus_website"
            android:layout_below="@+id/cus_website"
            android:layout_width="300dp"
            android:drawableBottom= "@drawable/shapes1"
            android:layout_marginLeft="10dp"
            android:textCursorDrawable="@drawable/colorcursor"
            android:fontFamily="@font/avenirlight"
            android:padding="15dp"
            android:textSize="18sp"
            android:layout_marginTop="15dp">
        </EditText>

        <TextView
            android:text="Company Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="425dp"
            android:id="@+id/cus_cmpnyname"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/avenirlight"
            android:textColor="#000"
            android:textStyle="bold">

        </TextView>
        <EditText
            android:layout_height="wrap_content"
            android:hint= "Company Name"
            android:id="@+id/editcus_cmpnyname"
            android:layout_below="@+id/cus_cmpnyname"
            android:layout_width="300dp"
            android:drawableBottom= "@drawable/shapes1"
            android:layout_marginLeft="10dp"
            android:textCursorDrawable="@drawable/colorcursor"
            android:fontFamily="@font/avenirlight"
            android:padding="15dp"
            android:textSize="18sp"
            android:layout_marginTop="15dp">
        </EditText>

        <TextView
            android:text="Brand Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="525dp"
            android:id="@+id/cus_brndname"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/avenirlight"
            android:textColor="#000"
            android:textStyle="bold">
        </TextView>
        <EditText

            android:layout_height="wrap_content"
            android:hint= "Brand Name"
            android:id="@+id/editcus_brndname"
            android:layout_below="@+id/cus_brndname"
            android:layout_width="300dp"
            android:drawableBottom= "@drawable/shapes1"
            android:layout_marginLeft="10dp"
            android:textCursorDrawable="@drawable/colorcursor"
            android:fontFamily="@font/avenirlight"
            android:padding="15dp"
            android:textSize="18sp"
            android:layout_marginTop="15dp">
        </EditText>

        <TextView
            android:text="Address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="625dp"
            android:id="@+id/cus_address"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/avenirlight"
            android:textColor="#000"
            android:textStyle="bold">

        </TextView>
        <EditText

            android:layout_height="wrap_content"
            android:hint= "Address"
            android:id="@+id/editcus_address"
            android:layout_below="@+id/cus_address"
            android:layout_width="300dp"
            android:drawableBottom= "@drawable/shapes1"
            android:layout_marginLeft="10dp"
            android:textCursorDrawable="@drawable/colorcursor"
            android:fontFamily="@font/avenirlight"
            android:padding="15dp"
            android:textSize="18sp"
            android:layout_marginTop="15dp">
        </EditText>


        <TextView
            android:text="@string/area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="725dp"
            android:id="@+id/cus_area"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/avenirlight"
            android:textColor="#000"
            android:textStyle="bold">

        </TextView>
        <EditText
            android:layout_height="wrap_content"
            android:hint= "Area"
            android:id="@+id/editcus_area"
            android:layout_below="@+id/cus_area"
            android:layout_width="300dp"
            android:drawableBottom= "@drawable/shapes1"
            android:layout_marginLeft="10dp"
            android:textCursorDrawable="@drawable/colorcursor"
            android:fontFamily="@font/avenirlight"
            android:padding="15dp"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:inputType="text">
        </EditText>
        <TextView
            android:text="Customer Category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="825dp"
            android:id="@+id/cus_category"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/avenirlight"
            android:textColor="#000"
            android:textStyle="bold">

        </TextView>

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/listCategory"
            android:layout_below="@+id/cus_category"
            android:hint= "select category"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="300dp"
            android:layout_height="35dp"

            android:textSize="18sp"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/shapes1"
            android:layout_below="@id/listCategory"/>
        <TextView
            android:text="Customer Status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="925dp"
            android:id="@+id/cus_status"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/avenirlight"
            android:textColor="#000"
            android:textStyle="bold">

        </TextView>

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/categoryStatuslists"
            android:layout_below="@+id/cus_status"
            android:hint= "select category"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="300dp"
            android:layout_height="35dp"

            android:textSize="18sp"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/shapes1"
            android:layout_below="@id/categoryStatuslists"/>
        <TextView
        android:text="Products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1025dp"
            android:id="@+id/cus_prdcts"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/avenirlight"
            android:textColor="#000"
            android:textStyle="bold">

    </TextView>
        <EditText
            android:layout_height="wrap_content"
            android:hint= "Products"
            android:id="@+id/editcus_prdcts"
            android:layout_below="@+id/cus_prdcts"
            android:layout_width="300dp"
            android:drawableBottom= "@drawable/shapes1"
            android:layout_marginLeft="10dp"
            android:textCursorDrawable="@drawable/colorcursor"
            android:fontFamily="@font/avenirlight"
            android:padding="15dp"
            android:textSize="18sp"
            android:layout_marginTop="15dp">
        </EditText>
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/nexttabicon"
            app:elevation="4dp"
            app:backgroundTint="#ff5e62"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="5dp"
            android:id="@+id/next_up"
            android:layout_below="@id/editcus_prdcts"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="1135dp">
        </View>
    </RelativeLayout>
</ScrollView>